# ppe-watcher

./: LICENSE  detection_system.code-workspace  docker-compose.yml  ppe_modelling.code-workspace
detection_system/: .gitignore  .python-version  Dockerfile  README.md  docker-compose.yml  mediamtx.yml  pyproject.toml
detection_system/detection_system/: main.py
detection_system/detection_system/core/: demo_event_detector.py  event_detector.py  event_submitter.py  fake_event_detector.py  frame_provider.py  image_uploader.py  plot.py
detection_system/detection_system/messaging/: message_sender.py
detection_system/detection_system/ml/: detectron_cfg.py  nms.py
detection_system/detection_system/models/: annotation.py  base.py  event.py  image.py  message.py  violation_ppe.py
detection_system/detection_system/utils/: logging.py  settings.py
ppe-frontend/: Dockerfile  quasar.config.js
ppe-frontend/src/pages/: CamerasPage.vue
ppe_modelling/: .gitignore  README.md  pyproject.toml
ppe_modelling/notebooks/: 03_predict_ppe_detector.ipynb  04_build_person_detector_dataset.ipynb  06_build_ppe_wearing_dataset.ipynb  07_train_ppe_wearing_classification_model_rip.ipynb  08_train_ppe_wearing_classification_model.ipynb  TIS_01_build_dataset.ipynb
ppe_modelling/ppe_modelling/: detectron_cfg.py  detectron_utils.py  logger.py  utils.py
system_of_analysis/: Dockerfile  requirements.txt
system_of_analysis/app/: app.db  main.py
system_of_analysis/app/domain/ports/: camera_repository.py
system_of_analysis/app/domain/services/: usecases.py
system_of_analysis/app/infrastructure/: rabbitmq_client.py
system_of_analysis/app/infrastructure/db/: camera_repository_impl.py
system_of_analysis/app/presentation/api/: cameras.py
system_of_analysis/app/presentation/api/schemas/: detection_event.py  detection_event_rabbit.py
