[project]
name = "detection-system"
version = "0.1.0"
description = "A package for performing realtime video analysis for the matter of ppe wearing violations"
authors = [
    {name = "Ilya Tampio",email = "tampio.is@edu.spbstu.ru"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "pydantic (>=2.11.1,<3.0.0)",
    "numpy (<2)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "pika (>=1.3.2,<2.0.0)",
    "aio-pika (>=9.5.5,<10.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "torchvision (>=0.21.0,<0.22.0)",
    "torchaudio (>=2.6.0,<3.0.0)",
    "filterpy (>=1.4.5,<2.0.0)",
    "scikit-image (>=0.25.2,<0.26.0)",
    "lap (>=0.5.12,<0.6.0)",
    "minio (>=7.2.15,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

